--- a/app/src/main/res/layout/movie_listing_item.xml
+++ b/app/src/main/res/layout/movie_listing_item.xml
@@ -33,6 +33,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="A Haunting in Venice"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
                 />
 
