--- a/app/src/main/res/layout/movie_listing_item.xml
+++ b/app/src/main/res/layout/movie_listing_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
+    android:transitionName="@string/movie_card_transition_name"
     style="?attr/materialCardViewFilledStyle"
     xmlns:tools="http://schemas.android.com/tools">
 
